# volume-control-rs

./: Cargo.toml
examples/: listen.rs  main.rs
src/: lib.rs  process_api.rs  session.rs  volume_monitor.rs
src/linux/: mod.rs  session.rs
src/windows/: mod.rs  process_api.rs  session.rs
