[package]
name = "windows-volume-control"
version = "0.1.0"
description = "A simple rust library to control Windows volumes."
license = "MIT"
edition = "2021"

[dependencies]
log = "0.4"
windows = { version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_Globalization",
  "Win32_Devices_FunctionDiscovery",
  "Win32_UI_Shell_PropertiesSystem",
] }
