[package]
name = "volume-control-rs"
version = "0.2.0"
description = "Cross-platform application and device volume control (Windows WASAPI, Linux PulseAudio/PipeWire)."
license = "MIT"
edition = "2021"

[dependencies]
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_Globalization",
  "Win32_Devices_FunctionDiscovery",
  "Win32_UI_Shell_PropertiesSystem",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2"
